--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,12 +1,19 @@
 p { font-family: Lato, sans-serif; }
 
 h1 { font-family: Lato, sans-serif; }
-.container{
+
+$screen-height: 150%;
+$screen-width: 88%;
+
+ .container {
   display: flex;
   position: center;
   margin-left: auto;
   margin-right: auto;
-  min-height: 800px;
-  width: 80%;
+  margin-top: 1.65%;
+  min-height: $screen-height;
+  width: $screen-width;
+   border-radius: 40px 40px 40px 40px;
   background-color: #3b3759;
+
 }
