--- a/src/app/store/containers/first-page/first-page.component.html
+++ b/src/app/store/containers/first-page/first-page.component.html
@@ -1,3 +1,12 @@
+<button (click)="signInWithGoogle()" > Sign In </button>
+<button (click)="signOutWithGoogle()" > Sign out </button>
+<button (click)="OnModal()" > update channel description </button>
+
+<div>
+  <h4>{{ user.name }}</h4>
+  <p>{{ user.email }}</p>
+</div>
+
 <div class="scrollable-area">
   <div *ngFor="let video of videos">
     <div>
@@ -14,6 +23,5 @@
     </div>
   </div>
 </div>
-
 
 
