add form(it should be fixed) and put request

--- a/src/app/components/board/board.component.html
+++ b/src/app/components/board/board.component.html
@@ -2,11 +2,11 @@
     <div class="board-side-bar">
       <div class="central-icons-wrapper">
         <nav>
-          <img class="svg imgs img-attention" src="../../../assets/iyoutube.svg" alt="1" routerLink="/first" routerLinkActive="active"/>
-          <img class="svg imgs img-in-progress" src="../../../assets/iyoutube.svg" alt="2" routerLink="/second" routerLinkActive="active"/>
-          <img class="svg imgs img-done" src="../../../assets/iyoutube.svg" alt="3" routerLink="/third" routerLinkActive="active"/>
-          <img class="svg imgs img-staff" src="../../../assets/iyoutube.svg" alt="4" routerLink="/fourth" routerLinkActive="active"/>
-          <img class="svg imgs img-logout" src="../../../assets/iyoutube.svg" alt="5" routerLink="/logout" routerLinkActive="active"/>
+          <img class="svg imgs " src="../../../assets/iyoutube.svg" alt="1" routerLink="/first" routerLinkActive="active"/>
+          <img class="svg imgs " src="../../../assets/iyoutube.svg" alt="2" routerLink="/second" routerLinkActive="active"/>
+          <img class="svg imgs " src="../../../assets/iyoutube.svg" alt="3" routerLink="/third" routerLinkActive="active"/>
+          <img class="svg imgs " src="../../../assets/iyoutube.svg" alt="4" routerLink="/fourth" routerLinkActive="active"/>
+          <img class="svg imgs profile-icon" src="../../../assets/users.png" alt="5" routerLink="/logout" routerLinkActive="active"/>
         </nav>
       </div>
     </div>
