--- a/src/app/store/containers/first-page/first-page.component.html
+++ b/src/app/store/containers/first-page/first-page.component.html
@@ -1,11 +1,4 @@
-<button (click)="signInWithGoogle()" > Sign In </button>
-<button (click)="signOutWithGoogle()" > Sign out </button>
-<button (click)="OnModal()" > update channel description </button>
-
-<div>
-  <h4>{{ user.name }}</h4>
-  <p>{{ user.email }}</p>
-</div>
+<h1>Videos from channel Net Ninja</h1>
 
 <div class="scrollable-area">
   <div *ngFor="let video of videos">
