--- a/src/app/components/board/board.component.scss
+++ b/src/app/components/board/board.component.scss
@@ -1,7 +1,7 @@
 .board-container{
   display: flex;
   flex-direction: row;
-  min-width: 90%;
+
 }
 
 .board-side-bar{
@@ -11,7 +11,7 @@
   align-content: flex-start;
   justify-content: space-around;
   background-color: #464071;
-  border-radius: 40px 0px 0px 40px;
+  border-radius: 40px 0 0 40px;
 }
 
 
@@ -20,11 +20,11 @@
   height: 720px;
   overflow-y: scroll;
   overflow-x: hidden;
-  padding: 10px 0px 10px 0px;
-  margin: 2px 0px 2px 10px;
+  padding: 10px 0 10px 0;
+  margin: 2px 0 2px 10px;
 
   max-width: 90%;
-  min-width: 1000px;
+  min-width: 1180px;
   font: 100%/1.4 serif;
   display: flex;
   flex-wrap: wrap;
@@ -59,7 +59,10 @@
   filter: invert(100%);
 }
 .imgs{
-  margin-left: auto;
-  margin-right: auto;
+  margin: auto;
   padding: 20px;
+}
+
+.profile-icon{
+
 }
