--- a/src/app/components/videos-form/videos-form.component.html
+++ b/src/app/components/videos-form/videos-form.component.html
@@ -4,26 +4,26 @@
     <form [formGroup]="videosForm" (ngSubmit)="onSubmit()">
       <div class="form-fields">
         <div class="form-fields__item">
-          <label for="VideosTitle">Videos Title</label>
+          <label for="DefLanguage">Enter default language</label>
           <input
             type="text"
-            id="VideosTitle"
+            id="DefLanguage"
             class="form-control"
-            formControlName="VideosTitle">
+            formControlName="DefLanguage">
         </div>
         <div class="form-fields__item" >
-          <label for="VideosDescription">Videos Description</label>
+          <label for="ChannelDescription">Enter channel Description</label>
           <input
             type="text"
-            id="VideosDescription"
+            id="ChannelDescription"
             class="form-control"
-            formControlName="VideosDescription">
+            formControlName="ChannelDescription">
         </div>
       </div>
       <div >
         <div class="form-buttons">
-          <button type="submit">Ok</button>
-          <button type="button">Cancel</button>
+          <button type="submit" (click)="modalService.close('m-1'); onSubmit()" >Ok</button>
+          <button type="button" (click)="modalService.close('m-1')">Cancel</button>
           <button type="button">lorem</button>
         </div>
       </div>
