--- a/src/app/components/board/board.component.scss
+++ b/src/app/components/board/board.component.scss
@@ -1,17 +1,64 @@
 .board-container{
   display: flex;
-  flex-direction: row;
-
+  flex-direction: column;
+  width: 100%;
 }
 
 .board-side-bar{
   display: flex;
-  flex-direction: column;
-  width: 91px;
+  flex-direction: row;
   align-content: flex-start;
-  justify-content: space-around;
+  justify-content: space-between;
   background-color: #464071;
-  border-radius: 40px 0 0 40px;
+  width: 100%;
+  border-radius: 40px;
+
+}
+
+nav {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
+  justify-content: space-between;
+  margin-right: 2%;
+  margin-left: 2%;
+  padding-top: 1%;
+}
+
+nav i{
+  margin: auto;
+  padding: 20px;
+}
+
+nav mat-icon{
+  margin: auto;
+  padding: 20px;
+}
+
+.mic{
+
+}
+
+
+.white-icon {
+  color: white;
+}
+
+.mat-form-field {
+  color: white;
+}
+
+.mat-form-field-label {
+  color: white;
+}
+
+.icon-display {
+  transform: scale(1.4);
+}
+.input-display{
+  transform: scale(1.3);
+
 }
 
 
@@ -23,9 +70,6 @@
   padding: 10px 0 10px 0;
   margin: 2px 0 2px 10px;
 
-  max-width: 90%;
-  min-width: 1180px;
-  font: 100%/1.4 serif;
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
@@ -49,18 +93,8 @@
 
 .central-icons-wrapper{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  align-content: center;
   width: 100%;
-}
 
-.img-attention{
-  filter: invert(100%);
-}
-.imgs{
-  margin: auto;
-  padding: 20px;
 }
 
 .profile-icon{
