fix ui troubles

--- a/src/app/store/containers/logout-page/logout-page.component.html
+++ b/src/app/store/containers/logout-page/logout-page.component.html
@@ -21,13 +21,9 @@
   </section>
 </div>
 
-<div class="button" (click)="$event.preventDefault(); onOpenDialog()">
-  <a href="#">Change data</a>
-</div>
 
-<div class="button" (click)="$event.preventDefault(); refreshToken()">
-  <a href="#">Refresh token</a>
-</div>
+<button mat-raised-button color="primary" (click)="openDialog()">Change data </button>
+<button mat-raised-button color="accent" (click)="refreshToken()">Refresh token</button>
 
 
 
