--- a/src/app/components/board/board.component.html
+++ b/src/app/components/board/board.component.html
@@ -28,7 +28,7 @@
         </nav>
       </div>
     </div>
-    <div class="card-area-scrollable">
+    <div class="card-area">
       <router-outlet></router-outlet>
     </div>
 </div>
