--- a/src/app/store/containers/first-page/first-page.component.html
+++ b/src/app/store/containers/first-page/first-page.component.html
@@ -3,7 +3,7 @@
 <h1>Videos from channel Net Ninja</h1>
 
 <div class="scrollable-area">
-  <div *ngFor="let video of youTubeService.videos">
+  <div *ngFor="let video of this.videos">
     <div>
       <a href="https://www.youtube.com/watch?v={{video.videoId}}"   >
         <img [src]="video.imgSource" class="card-img-top" alt="..."></a>
