--- a/src/app/store/containers/logout-page/logout-page.component.scss
+++ b/src/app/store/containers/logout-page/logout-page.component.scss
@@ -30,38 +30,11 @@
   text-align: center;
 }
 
-.middle-card {
-  text-align: justify;
-  margin: 5px 25px;
+.mat-raised-button{
+  margin: 5px;
 }
 
 
-
-
-
-.button {
-  font-family: 'Raleway', sans-serif;
-  background: #464071;
-  display: inline-flex;
-  height: 40px;
-  width: 150px;
-  border: 2px solid #BFC0C0;
-  margin: 20px 20px 20px 20px;
-  color: #BFC0C0;
-  text-transform: uppercase;
-  text-decoration: none;
-  font-size: .8em;
-  letter-spacing: 1.5px;
-  align-items: center;
-  justify-content: center;
-  overflow: hidden;
-}
-
-a {
-  color: #fdfcfc;
-  text-decoration: none;
-  letter-spacing: 1px;
-}
 
 
 
