--- a/src/app/store/containers/first-page/first-page.component.html
+++ b/src/app/store/containers/first-page/first-page.component.html
@@ -4,19 +4,36 @@
 
 <div class="scrollable-area">
   <div *ngFor="let video of this.videos">
-    <div>
-      <a href="https://www.youtube.com/watch?v={{video.videoId}}"   >
-        <img [src]="video.imgSource" class="card-img-top" alt="..."></a>
-      <div>
-        <h5>
-          <a href="https://www.youtube.com/watch?v={{video.videoId}}" (click)="$event.preventDefault(); OnModal()">
-            {{video.title}}
-          </a>
-        </h5>
+  <mat-card class="example-card">
+    <mat-card-header>
+      <mat-card-title>{{video.title}}</mat-card-title>
+    </mat-card-header>
+    <img [src]="video.imgSource" class="card-img-top" alt="...">
+      <mat-card-content>
         <div class="description">{{video.description.slice(0, 80)}}</div>
-      </div>
-    </div>
+      </mat-card-content>
+    <mat-card-actions>
+      <button mat-button>LIKE</button>
+      <button mat-button>SHARE</button>
+    </mat-card-actions>
+  </mat-card>
   </div>
-</div>
+
+
+<!--  <div *ngFor="let video of this.videos">-->
+<!--    <div>-->
+<!--      <a href="https://www.youtube.com/watch?v={{video.videoId}}"   >-->
+<!--        <img [src]="video.imgSource" class="card-img-top" alt="..."></a>-->
+<!--      <div>-->
+<!--        <h5>-->
+<!--          <a href="https://www.youtube.com/watch?v={{video.videoId}}" (click)="$event.preventDefault(); OnModal()">-->
+<!--            {{video.title}}-->
+<!--          </a>-->
+<!--        </h5>-->
+<!--        <div class="description">{{video.description.slice(0, 80)}}</div>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
 
 
