--- a/src/app/store/containers/first-page/first-page.component.html
+++ b/src/app/store/containers/first-page/first-page.component.html
@@ -3,12 +3,12 @@
 <h1>Videos from channel Net Ninja</h1>
 
 <div class="scrollable-area">
-  <div *ngFor="let video of this.videos">
+  <div  class="example-card-cover" *ngFor="let video of this.videos">
   <mat-card class="example-card">
     <mat-card-header>
-      <mat-card-title>{{video.title}}</mat-card-title>
+      <mat-card-title>{{video.title.slice(0, 40)+ '...'}}</mat-card-title>
     </mat-card-header>
-    <img [src]="video.imgSource" class="card-img-top" alt="...">
+    <img [src]="video.imgSource" class="card-img-top contain" alt="...">
       <mat-card-content>
         <div class="description">{{video.description.slice(0, 80)}}</div>
       </mat-card-content>
