--- a/src/app/store/containers/second-page/second-page.component.html
+++ b/src/app/store/containers/second-page/second-page.component.html
@@ -2,3 +2,22 @@
   <p>Second page works!</p>
 </div>
 
+
+
+<div class="scrollable-area">
+  <div *ngFor="let video of this.videos">
+    <mat-card class="example-card">
+      <mat-card-header>
+        <mat-card-title>{{video.title.slice(0, 40)+'...'}}</mat-card-title>
+      </mat-card-header>
+      <img [src]="video.imgSource" class="card-img-top contain" alt="...">
+      <mat-card-content>
+        <div class="description">{{video.description.slice(0, 80)}}</div>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button>LIKE</button>
+        <button mat-button>SHARE</button>
+      </mat-card-actions>
+    </mat-card>
+  </div>
+</div>
