add query params for saving result of request after reloading

--- a/src/app/components/board/board.component.html
+++ b/src/app/components/board/board.component.html
@@ -7,7 +7,7 @@
             <i class="material-icons white-icon icon-display" routerLink="/second" routerLinkActive="active">video_library</i>
           </div>
           <div class="central-items">
-            <mat-form-field class="input-display" #searchForm>
+            <mat-form-field class="input-display" >
               <input id="app_search_input"
                      matInput
                      type="search"
