--- a/src/app/store/containers/second-page/second-page.component.html
+++ b/src/app/store/containers/second-page/second-page.component.html
@@ -3,14 +3,14 @@
 </div>
 
 <div class="scrollable-area">
-  <div *ngFor="let video of this.youtubeService.videos">
+  <div *ngFor="let video of this.secondPageVideos">
     <mat-card class="example-card">
       <mat-card-header>
-        <mat-card-title>{{video.title.slice(0, 40)+'...'}}</mat-card-title>
+        <mat-card-title>{{video.title | cutText: 40 }}</mat-card-title>
       </mat-card-header>
       <img [src]="video.imgSource" class="card-img-top contain" alt="...">
       <mat-card-content>
-        <div class="description">{{video.description.slice(0, 80)}}</div>
+        <div class="description">{{video.description | cutText: 80 }}</div>
       </mat-card-content>
       <mat-card-actions>
         <button mat-button>LIKE</button>
