change home page, add videos from your channel, add possibility to change your videos title, description, localizations

--- a/src/app/components/board/board.component.html
+++ b/src/app/components/board/board.component.html
@@ -20,7 +20,7 @@
             </mat-form-field>
           </div>
           <div class="right-items">
-            <mat-icon class="white-icon icon-display" > video_call </mat-icon>
+            <mat-icon class="white-icon icon-display" routerLink="/third" routerLinkActive="active" > video_call </mat-icon>
             <mat-icon class="white-icon icon-display"> notifications_none </mat-icon>
             <mat-icon class="white-icon icon-display" [matMenuTriggerFor]="afterMenu"> person </mat-icon>
             <mat-menu #afterMenu="matMenu" xPosition="before">
