--- a/src/app/store/containers/first-page/first-page.component.html
+++ b/src/app/store/containers/first-page/first-page.component.html
@@ -1,20 +1,21 @@
 <h1>Home page</h1>
 
-<h1>Videos from channel Net Ninja</h1>
+<h1>Videos from your channel</h1>
 
 <div class="scrollable-area">
   <div  class="example-card-cover" *ngFor="let video of this.videos">
   <mat-card class="example-card">
     <mat-card-header>
-      <mat-card-title>{{video.title.slice(0, 40)+ '...'}}</mat-card-title>
+      <mat-card-title>{{video.title | cutText:40}}</mat-card-title>
     </mat-card-header>
     <img [src]="video.imgSource" class="card-img-top contain" alt="...">
       <mat-card-content>
-        <div class="description">{{video.description.slice(0, 80)}}</div>
+        <div class="description">{{video.description | cutText: 80}}</div>
       </mat-card-content>
     <mat-card-actions>
       <button mat-button>LIKE</button>
       <button mat-button>SHARE</button>
+      <button mat-button (click)="onVideoChange(video.videoId)" > EDIT </button>
     </mat-card-actions>
   </mat-card>
   </div>
