--- a/src/app/store/containers/edit-video-page/edit-video.component.html
+++ b/src/app/store/containers/edit-video-page/edit-video.component.html
@@ -1,58 +1,72 @@
-<div>Edit video page</div>
-<br>
-<form [formGroup]="videoEditForm" novalidate >
-  <mat-form-field appearance="fill">
-    <mat-label>Video default title (english)</mat-label>
-    <input matInput type="text" formControlName="enTitle">
-    <div *ngIf="_enTitle.invalid && (_enTitle.touched || _enTitle.dirty)">
-      <span *ngIf="_enTitle.errors?.required">
-        Field is required
-      </span>
-      <span *ngIf="_enTitle.value.length > 40">
-        Max length is 40
-      </span>
-    </div>
-  </mat-form-field>
-  <br>
-  <mat-form-field appearance="fill">
-    <mat-label>video default description (english)</mat-label>
-    <input matInput type="text" formControlName="enDescription" >
-    <div *ngIf="_enDescription.invalid && (_enDescription.touched || _enDescription.dirty)">
-      <span *ngIf="_enDescription.errors?.required">
-        Field is required
-      </span>
-      <span *ngIf="_enDescription.value.length > 80">
-        Max length is 80
-      </span>
-    </div>
-  </mat-form-field>
-  <br>
-  <mat-form-field appearance="fill">
-    <mat-label>localization title (rus)</mat-label>
-    <input matInput type="text" formControlName="ruTitle">
-    <div *ngIf="_ruTitle.invalid && (_ruTitle.touched || _ruTitle.dirty)">
-      <span *ngIf="_ruTitle.errors?.required">
-        Field is required
-      </span>
-      <span *ngIf="_ruTitle.value.length > 40">
-        Max length is 40
-      </span>
-    </div>
-  </mat-form-field>
-  <br>
-  <mat-form-field appearance="fill">
-    <mat-label>localization description (rus)</mat-label>
-    <input matInput  type="text" formControlName="ruDescription" >
-    <div *ngIf="_ruDescription.invalid && (_ruDescription.touched || _ruDescription.dirty)">
-      <span *ngIf="_ruDescription.errors?.required">
-        Field is required
-      </span>
-      <span *ngIf="_ruDescription.value.length > 40">
-        Max length is 80
-      </span>
-    </div>
-  </mat-form-field>
-  <br>
-  <button mat-button class="mat-primary" (click)="onSubmit()">Ok</button>
+<div class="container">
 
-</form>
+
+<mat-card class="example-card">
+  <mat-card-header>
+    <mat-card-title>{{data.title | cutText:40}}</mat-card-title>
+  </mat-card-header>
+  <img [src]="data.imgSource" class="card-img-top contain" alt="...">
+  <mat-card-content>
+    <div class="description">{{data.description | cutText: 80}}</div>
+  </mat-card-content>
+  <mat-card-actions>
+    <mat-card-title>{{data.rusTitle | cutText:40}}</mat-card-title>
+    <div class="description">{{data.rusDescription | cutText: 80}}</div>
+  </mat-card-actions>
+</mat-card>
+<br>
+
+<div >
+  <form [formGroup]="videoEditForm" novalidate >
+    <mat-form-field appearance="fill">
+      <mat-label>{{data.title}}</mat-label>
+      <input matInput type="text" formControlName="enTitle">
+      <div *ngIf="_enTitle.invalid && (_enTitle.touched || _enTitle.dirty)">
+      <span *ngIf="_enTitle.errors?.required" class="span-required">
+        Field is required
+      </span>
+        <span *ngIf="_enTitle.value.length > 40">
+        Max length is 40
+      </span>
+      </div>
+    </mat-form-field>
+    <br>
+    <mat-form-field appearance="fill" >
+      <mat-label>{{data.description}}</mat-label>
+      <input matInput type="text" formControlName="enDescription" >
+      <div *ngIf="_enDescription.invalid && (_enDescription.touched || _enDescription.dirty)">
+      <span *ngIf="_enDescription.errors?.required" class="span-required">
+        Field is required
+      </span>
+        <span *ngIf="_enDescription.value.length > 80" class="span-required">
+        Max length is 80
+      </span>
+      </div>
+    </mat-form-field>
+    <div class="optional-fields-title">Optional Fields</div>
+    <mat-form-field appearance="fill">
+      <mat-label>{{data.rusTitle}}</mat-label>
+      <input matInput type="text" formControlName="ruTitle">
+      <div *ngIf="_ruTitle.invalid && (_ruTitle.touched || _ruTitle.dirty)">
+      <span *ngIf="_ruTitle.value.length > 40" class="span-required">
+        Max length is 40
+      </span>
+      </div>
+    </mat-form-field>
+    <br>
+    <mat-form-field appearance="fill">
+      <mat-label>{{data.rusDescription}}</mat-label>
+      <input matInput  type="text" formControlName="ruDescription" >
+      <div *ngIf="_ruDescription.invalid && (_ruDescription.touched || _ruDescription.dirty)">
+      <span *ngIf="_ruDescription.value.length > 40" class>
+        Max length is 80
+      </span>
+      </div>
+    </mat-form-field>
+    <br>
+    <br>
+    <button mat-raised-button color="primary" (click)="onSubmit()"> Submit </button>
+  </form>
+</div>
+</div>
+
