add cancel button

--- a/src/app/store/containers/edit-video-page/edit-video.component.html
+++ b/src/app/store/containers/edit-video-page/edit-video.component.html
@@ -69,7 +69,8 @@
       </mat-form-field>
       <br>
       <br>
-      <button mat-raised-button color="primary" (click)="onSubmit()"> Submit</button>
+      <button mat-raised-button color="primary" (click)="onSubmit()"> Save</button>
+      <button mat-raised-button color="accent" (click)="onCancel()"> Cancel</button>
     </form>
   </div>
 </div>
