some UI changes

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -11,7 +11,7 @@ $screen-width: 100%;
   margin-right: auto;
 
   width: $screen-width;
-   border-radius: 40px 40px 40px 40px;
+   height: $screen-height;
   background-color: #3b3759;
 
 }
