--- a/src/app/components/board/board.component.scss
+++ b/src/app/components/board/board.component.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  height: 100%;
 }
 
 .board-side-bar{
@@ -35,10 +36,6 @@ nav mat-icon{
   padding: 20px;
 }
 
-.mic{
-
-}
-
 
 .white-icon {
   color: white;
@@ -65,10 +62,6 @@ nav mat-icon{
 .card-area {
   padding: 10px 0 10px 0;
   margin: 2% 2% 2% 5%;
-  min-height: 700px;
-
-
-
 }
 
 
