--- a/src/app/store/containers/edit-video-page/edit-video.component.scss
+++ b/src/app/store/containers/edit-video-page/edit-video.component.scss
@@ -1,12 +1,46 @@
 .container{
-  width : 35%
+  width : 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.preview{
+  width: 30%;
+  margin-right: 20%;
+  height: 10%;
+}
+
+.form-field{
+  width: 40%;
+  height: 100%;
+  padding: 1%;
+  background-color: #fdfcfc;
+  border-radius: 1%;
+}
+
+
+.form-field form{
+
+}
+
+.footer{
+  margin-top: 5%;
+}
+
+.footer button{
+  margin-right: 2%;
+}
+
+.example-card{
+  width: 70%;
 }
 
 .mat-form-field{
   min-width: 100%;
   background-color: #fdfcfc;
-}
 
+}
 
 
 .form-video-edit {
@@ -18,6 +52,13 @@
   font-size: 15px;
   font-weight: bold;
   padding: 2%;
+}
+
+
+.contain{
+  height: 50%;
+  width: 100%;
+  object-fit: contain;
 }
 
 
