--- a/src/app/store/containers/edit-video-page/edit-video.component.html
+++ b/src/app/store/containers/edit-video-page/edit-video.component.html
@@ -4,8 +4,7 @@
     <form [formGroup]="videoEditForm" novalidate>
       <mat-form-field appearance="fill">
         <mat-label>default title</mat-label>
-        <input matInput type="text" formControlName="enTitle"
-               (keyup)="onChange('enTitle' ,this._enTitle.value)">
+        <input matInput type="text" formControlName="enTitle" >
         <div *ngIf="_enTitle.invalid && (_enTitle.touched || _enTitle.dirty)">
       <span *ngIf="_enTitle.errors?.required" class="span-required">
         Field is required
@@ -18,8 +17,7 @@
       <br>
       <mat-form-field appearance="fill">
         <mat-label>default description</mat-label>
-        <input matInput type="text" formControlName="enDescription"
-               (keyup)="onChange('enDescription' ,this._enDescription.value)">
+        <input matInput type="text" formControlName="enDescription">
         <div *ngIf="_enDescription.invalid && (_enDescription.touched || _enDescription.dirty)">
       <span *ngIf="_enDescription.errors?.required" class="span-required">
         Field is required
@@ -32,8 +30,7 @@
       <div class="optional-fields-title">Optional Fields</div>
       <mat-form-field appearance="fill">
         <mat-label>Russian title</mat-label>
-        <input matInput type="text" formControlName="ruTitle"
-               (keyup)="onChange('ruTitle' ,this._ruTitle.value)">
+        <input matInput type="text" formControlName="ruTitle" >
         <div *ngIf="_ruTitle.invalid && (_ruTitle.touched || _ruTitle.dirty)">
       <span *ngIf="_ruTitle.value.length > 40" class="span-required">
         Max length is 40
@@ -43,8 +40,7 @@
       <br>
       <mat-form-field appearance="fill">
         <mat-label>Russian description</mat-label>
-        <input matInput type="text" formControlName="ruDescription"
-               (keyup)="onChange('ruDescription' ,this._ruDescription.value)">
+        <input matInput type="text" formControlName="ruDescription">
         <div *ngIf="_ruDescription.invalid && (_ruDescription.touched || _ruDescription.dirty)">
       <span *ngIf="_ruDescription.value.length > 40" class>
         Max length is 80
@@ -56,15 +52,15 @@
   <div class="preview">
     <mat-card class="example-card">
       <mat-card-header>
-        <mat-card-title>{{data.title | cutText:40}}</mat-card-title>
+        <mat-card-title>{{_enTitle.value | cutText:40}}</mat-card-title>
       </mat-card-header>
       <img [src]="data.imgSource" class="card-img-top contain" alt="...">
       <mat-card-content>
-        <div class="description">{{data.description | cutText: 80}}</div>
+        <div class="description">{{_enDescription.value | cutText: 80}}</div>
       </mat-card-content>
       <mat-card-actions>
-        <mat-card-title>{{data.rusTitle | cutText:40}}</mat-card-title>
-        <div class="description">{{data.rusDescription | cutText: 80}}</div>
+        <mat-card-title>{{_ruTitle.value | cutText:40}}</mat-card-title>
+        <div class="description">{{_ruDescription.value | cutText: 80}}</div>
       </mat-card-actions>
     </mat-card>
   </div>
