--- a/src/app/components/board/board.component.scss
+++ b/src/app/components/board/board.component.scss
@@ -10,7 +10,7 @@
   flex-direction: row;
   align-content: flex-start;
   justify-content: space-between;
-  background-color: #464071;
+  background-color: #c4302b;
   width: 100%;
 
 }
