--- a/src/app/store/containers/edit-video-page/edit-video.component.scss
+++ b/src/app/store/containers/edit-video-page/edit-video.component.scss
@@ -1,37 +1,58 @@
-.container{
+.container {
   width : 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 40% 30% 30%;
+  grid-template-areas:
+    "form_field preview preview"
+    ". preview preview "
+    ".   . footer";
+
 }
 
 .preview{
-  width: 30%;
+  display: grid;
+  grid-area: preview;
+  justify-items: end;
+  width: 100%;
   margin-right: 20%;
   height: 10%;
 }
 
-.form-field{
-  width: 40%;
+.form_field{
+  display: grid;
+  grid-area: form_field;
+  width: 100%;
   height: 100%;
   padding: 1%;
   background-color: #fdfcfc;
   border-radius: 1%;
 }
 
-
-.form-field form{
-
+.form_field form{
+  display: grid;
+  align-items: start;
 }
 
 .footer{
-  position: relative;
-  padding-top: 15%;
-  margin-top: -1%;
+  display: flex;
+  grid-area: footer;
+  flex-direction: row;
+  margin-left: auto;
+  padding: 20px;
 }
 
 .footer button{
-  margin-right: 2%;
+  margin-right: 10%;
+  padding: 1%;
+}
+
+.cancel{
+  background-color: #f44336;
+}
+
+.ok{
+  background-color: #0074D9;
+
 }
 
 .example-card{
@@ -42,11 +63,6 @@
   min-width: 100%;
   background-color: #fdfcfc;
 
-}
-
-
-.form-video-edit {
-  background-color: #fdfcfc;
 }
 
 .optional-fields-title{
