minor youtube service changes

--- a/src/app/store/containers/third-page/third-page.component.html
+++ b/src/app/store/containers/third-page/third-page.component.html
@@ -18,4 +18,6 @@
       </mat-card-actions>
     </mat-card>
   </div>
+  <button mat-button (click)="navigateOnVideoChangePage('adding_new_video')"> Add video</button>
+
 </div>
