--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,80 @@
-<app-board></app-board>
-
+<div class="board-container">
+  <div class="board-side-bar">
+    <div class="central-icons-wrapper">
+      <nav>
+        <div class="left-items">
+          <i
+            class="material-icons white-icon icon-display"
+            routerLink="/home"
+            routerLinkActive="active"
+            >menu</i
+          >
+          <i
+            class="material-icons white-icon icon-display"
+            routerLink="/second"
+            routerLinkActive="active"
+            >video_library</i
+          >
+        </div>
+        <div class="central-items">
+          <mat-form-field class="input-display">
+            <input
+              id="app_search_input"
+              matInput
+              type="search"
+              #app_search_input
+              placeholder="Enter smth"
+              class="search-input"
+            />
+            <button matSuffix mat-button>
+              <mat-icon
+                class="white-icon input-display"
+                (click)="
+                  searchRequest(app_search_input.value);
+                  app_search_input.value = ''
+                "
+                >search</mat-icon
+              >
+            </button>
+          </mat-form-field>
+        </div>
+        <div class="right-items">
+          <mat-icon
+            class="white-icon icon-display"
+            routerLink="/third"
+            routerLinkActive="active"
+          >
+            video_call
+          </mat-icon>
+          <mat-icon class="white-icon icon-display">
+            notifications_none
+          </mat-icon>
+          <mat-icon
+            class="white-icon icon-display"
+            [matMenuTriggerFor]="afterMenu"
+          >
+            person
+          </mat-icon>
+          <mat-menu #afterMenu="matMenu" xPosition="before">
+            <button
+              mat-menu-item
+              routerLink="/logout"
+              routerLinkActive="active"
+            >
+              Profile
+            </button>
+            <button
+              mat-menu-item
+              (click)="this.authService.signOutWithGoogle()"
+            >
+              Log out
+            </button>
+          </mat-menu>
+        </div>
+      </nav>
+    </div>
+  </div>
+  <div class="card-area">
+    <router-outlet></router-outlet>
+  </div>
+</div>
