--- a/src/app/store/containers/third-page/third-page.component.html
+++ b/src/app/store/containers/third-page/third-page.component.html
@@ -1,23 +1,43 @@
-
 <h1>Videos from your channel</h1>
+<button
+  mat-raised-button
+  class="mat-background-warn add_card"
+  (click)="navigateOnVideoChangePage('adding_new_video')"
+>
+  Add video
+</button>
 
 <div class="scrollable-area">
-  <div  class="example-card-cover" *ngFor="let video of this.myVideos">
+  <div class="example-card-cover" *ngFor="let video of this.myVideos">
     <mat-card class="example-card">
       <mat-card-header>
-        <mat-card-title>{{video.title | cutText:40}}</mat-card-title>
+        <mat-card-title>{{ video.title | cutText: 40 }}</mat-card-title>
       </mat-card-header>
-      <img [src]="video.imgSource" class="card-img-top contain" alt="...">
+      <img [src]="video.imgSource" class="card-img-top contain" alt="..." />
       <mat-card-content>
-        <div class="description">{{video.description | cutText: 80}}</div>
+        <div class="description">{{ video.description | cutText: 80 }}</div>
       </mat-card-content>
       <mat-card-actions>
         <button mat-button>LIKE</button>
         <button mat-button>SHARE</button>
-        <button mat-button (click)="navigateOnVideoChangePage(video.videoId)" > EDIT </button>
+        <mat-icon
+          class="white-icon icon-display"
+          [matMenuTriggerFor]="afterMenu"
+        >
+          edit
+        </mat-icon>
+        <mat-menu #afterMenu="matMenu" xPosition="before">
+          <button mat-menu-item (click)="openDialogOnDelete(video.videoId)">
+            Delete video
+          </button>
+          <button
+            mat-menu-item
+            (click)="navigateOnVideoChangePage(video.videoId)"
+          >
+            Edit video
+          </button>
+        </mat-menu>
       </mat-card-actions>
     </mat-card>
   </div>
-  <button mat-button (click)="navigateOnVideoChangePage('adding_new_video')"> Add video</button>
-
 </div>
