--- a/src/app/store/containers/logout-page/logout-page.component.scss
+++ b/src/app/store/containers/logout-page/logout-page.component.scss
@@ -1,47 +1,139 @@
-.main {
-  font-family: Arial, Helvetica, sans-serif;
-  width: 300px;
-  background-color: #fdfcfc;
-  font-size: 16px;
-  line-height: 22px;
-  color: #000;
+.container {
+  width: 80%;
+  margin: auto;
+  display: grid;
+  grid-template-areas:
+    "banner   banner  banner"
+    "channel     .     ."
+    "stata   stata   stata";
+
+  -webkit-box-shadow: 0 0 20px #222;
+  -moz-box-shadow: 0 0 20px #222;
+  box-shadow: 0 0 20px #222;
+  background-color: #f9fcff;
+
   border-radius: 10px;
-  box-shadow: -4px -4px 20px rgba(0, 0, 0, 0.505);
-  margin: 50px auto;
-
 }
 
-.top-card img {
+.banner {
+  grid-area: banner;
   width: 100%;
-
+  height: 200px;
+  padding-bottom: 2%;
 }
 
-.mail{
-  color: #7f7f7f;
+.cover {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+
+  border-radius: 10px;
 }
 
+.channel {
+  height: 50vh;
+  width: 90%;
+  margin: 3% auto auto;
 
-
-.h1{
-  font-size: 22px;
-  color: #000;
-  font-weight: 600;
-  margin: 12px 0;
-  text-align: center;
+  padding-bottom: 2%;
+  padding-top: 2%;
+  grid-area: channel;
 }
 
-.mat-raised-button{
-  margin: 5px;
+.statistics {
+  width: 90%;
+  margin: auto auto 5%;
+  grid-area: stata;
+  padding-top: 2%;
+  border-radius: 10px;
 }
 
+.mat-divider {
+  margin-top: 5%;
+  margin-bottom: 1%;
+}
 
+table {
+  width: 100%;
+}
 
+.profileGroup {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
 
+.profileIcon {
+  display: flex;
+  align-items: center;
+  width: 75px;
+  height: 75px;
+}
 
+.center {
+  display: flex;
+  align-items: center;
+}
 
+.profileData {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin-left: 5%;
+}
 
+h4 {
+  display: flex;
+  align-items: flex-end;
+  margin: 0;
+}
+h5 {
+  display: flex;
+  align-items: flex-start;
+  margin: 0;
+}
 
+.scrollable-area {
+  max-height: 42vh;
+  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: 20% 20% 20% 20%;
 
+  justify-content: space-evenly;
+  justify-self: center;
+}
 
+.example-card {
+  margin-top: 16%;
+  height: 80%;
+  width: 100%;
+}
 
+.contain {
+  height: 50%;
+  width: 100%;
+  object-fit: contain;
+}
 
+.mat-card-actions {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.mat-icon {
+  margin: 4%;
+}
+
+.add_card {
+}
+
+//.card-img{
+//  margin-top: -78%;
+//  height: 100%;
+//  width: 50%;
+//  box-shadow:0 0 0 128px rgba(0, 0, 153, 0.33) inset;
+//  position: absolute;
+//
+//}
